--- a/requirements.txt
+++ b/requirements.txt
@@ -1,209 +1,5 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.15
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.4.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.2.1
-async-lru==2.0.4
-async-timeout==4.0.3
-attrs==24.2.0
-audioread==3.0.0
-babel==2.16.0
-backcall==0.2.0
-beautifulsoup4==4.9.3
-bleach==6.1.0
-blinker==1.9.0
-bs4==0.0.1
-cachetools==5.5.2
-certifi==2025.1.31
-cffi==1.15.1
-charset-normalizer==2.0.4
-click==8.1.8
-colorama==0.4.4
-comm==0.2.2
-contourpy==1.1.0
-cycler==0.11.0
-dataclasses-json==0.6.7
-debugpy==1.6.6
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.9.0
-et_xmlfile==2.0.0
-exceptiongroup==1.2.2
-executing==1.2.0
-faiss-cpu==1.10.0
-fastapi==0.115.12
-fastjsonschema==2.20.0
-fonttools==4.42.1
-fpdf==1.7.2
-fqdn==1.5.1
-frozenlist==1.5.0
-gitdb==4.0.12
-GitPython==3.1.44
-greenlet==3.1.1
-h11==0.14.0
-html5lib==1.1
-httpcore==1.0.5
-httpx==0.27.2
-httpx-sse==0.4.0
-idna==3.2
-imageio==2.31.3
-importlib-metadata==6.0.0
-importlib-resources==6.0.1
-ipykernel==6.21.2
-ipython==8.10.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-jedi==0.18.2
-Jinja2==3.1.4
-jiter==0.9.0
-joblib==1.3.2
-json5==0.9.25
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.0.3
-jupyter_core==5.2.0
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-kaggle==1.5.12
-kiwisolver==1.4.5
-langchain==0.3.22
-langchain-community==0.3.20
-langchain-core==0.3.49
-langchain-text-splitters==0.3.7
-langsmith==0.3.21
-lazy_loader==0.3
-librosa==0.10.1
-llvmlite==0.40.1
-lxml==5.3.2
-MarkupSafe==2.1.5
-marshmallow==3.26.1
-matplotlib==3.7.3
-matplotlib-inline==0.1.6
-mistune==3.0.2
-msgpack==1.0.5
-multidict==6.3.0
-mypy-extensions==1.0.0
-narwhals==1.33.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.5.6
-networkx==3.1
-notebook==7.2.2
-notebook_shim==0.2.4
-numba==0.57.1
-numpy==2.0.2
-openai==0.28.1
-opencv-python==4.8.0.76
-openpyxl==3.1.5
-orjson==3.10.16
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==10.0.0
-platformdirs==3.0.0
-playsound==1.3.0
-pooch==1.7.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.36
-propcache==0.3.1
-protobuf==5.29.4
-psutil==5.9.4
-pure-eval==0.2.2
-pyarrow==19.0.1
-pycparser==2.21
-pydantic==2.11.1
-pydantic-settings==2.8.1
-pydantic_core==2.33.0
-pydeck==0.9.1
-Pygments==2.14.0
-pyparsing==3.1.1
-pypdf==5.4.0
-PyPDF2==3.0.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.1.0
-python-json-logger==2.0.7
-python-multipart==0.0.20
-python-slugify==5.0.2
-pytz==2025.2
-PyWavelets==1.4.1
-pywin32==305
-pywinpty==2.0.13
-PyYAML==6.0.2
-pyzmq==25.0.0
-referencing==0.35.1
-requests==2.32.3
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.20.0
-scikit-image==0.21.0
-scikit-learn==1.3.0
-scipy==1.11.2
-selenium==4.31.0
-Send2Trash==1.8.3
-six==1.16.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soundfile==0.12.1
-soupsieve==2.2.1
-soxr==0.3.6
-SQLAlchemy==2.0.40
-stack-data==0.6.2
-starlette==0.46.1
-streamlit==1.44.0
-tenacity==9.0.0
-terminado==0.18.1
-text-unidecode==1.3
-threadpoolctl==3.2.0
-tifffile==2023.8.30
-tinycss2==1.3.0
-toml==0.10.2
-tomli==2.0.1
-tornado==6.2
-tqdm==4.62.1
-traitlets==5.9.0
-trio==0.29.0
-trio-websocket==0.12.2
-types-python-dateutil==2.9.0.20240821
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-typing_extensions==4.13.0
-tzdata==2025.2
-uri-template==1.3.0
-urllib3==1.26.6
-uvicorn==0.34.0
-watchdog==6.0.0
-wcwidth==0.2.6
-webcolors==24.8.0
-webdriver-manager==4.0.2
-webencodings==0.5.1
-websocket-client==1.8.0
-widgetsnbextension==4.0.13
-wsproto==1.2.0
-yarl==1.18.3
-youtube-dl==2021.12.17
-yt-dlp==2025.2.19
-zipp==3.14.0
-zstandard==0.23.0
+fastapi
+uvicorn
+requests
+python-dotenv
+fpdf
